k8s/face-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: face
  name: face
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: face
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: face
    spec:
      containers:
        - image: faucon04/face
          name: face
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          command:
            - python3
            - -u
            - /app/faceReconnation.py
#          imagePullPolicy: Always
#          startupProbe:
#            exec:
#              command:
#                - python3
#                - /app/faceReconnation.py
  #          periodSeconds: 10000
  #          timeoutSeconds: 10000
  #          initialDelaySeconds: 10000
      restartPolicy: Always
status: {}
