k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: front
    spec:
      containers:
        - image: faucon04/front
          name: front
          ports:
            - containerPort: 4200
          resources: {}
      restartPolicy: Always
status: {}
