k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/gatewaynetwork: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: AUTH_SUBGRAPH
              value: http://auth:3002/query
          image: faucon04/gateway
          name: gateway
          ports:
            - containerPort: 4000
          resources: {}
      restartPolicy: Always
status: {}
