k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: auth
  name: auth
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    io.kompose.service: auth
status:
  loadBalancer: {}
