k8s/gatewaynetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: gatewaynetwork
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/gatewaynetwork: "true"
  podSelector:
    matchLabels:
      io.kompose.network/gatewaynetwork: "true"
